@@ -22,6 +22,7 @@ Version 0.6.0~dev
 	* Add mpeg2 transcode action, closes: #5763.
 	* Do not execute _finalize method if worker exited abnormally.
 	* Remove sleep based loop in Action._execute_worker, closes: #5759.
+	* Support gxf muxing in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
